fix: upper-text nowrap

--- a/src/gantt.scss
+++ b/src/gantt.scss
@@ -63,6 +63,7 @@ $dark-blue: #2c94ec !default;
   .upper-text {
     position: absolute;
     width: fit-content;
+    white-space: nowrap;
     font-weight: 500;
     font-size: 16px;
   }
